# TorchOpenFace

./: .gitignore  CMakeLists.txt  README.md  run.sh  torch_openface.py  wiki.md
exe/: CMakeLists.txt  TorchFaceMain.cpp
lib/: utils.cpp
lib/FaceAnalyser/: CMakeLists.txt
lib/FaceAnalyser/include/: FaceAnalyser.h  FaceAnalyserParameters.h  SVM_dynamic_lin.h  SVR_dynamic_lin_regressors.h  SVR_static_lin_regressors.h
lib/FaceAnalyser/src/: FaceAnalyser.cpp  FaceAnalyserParameters.cpp  Face_utils.cpp  SVM_dynamic_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_static_lin_regressors.cpp
lib/GazeAnalyser/: CMakeLists.txt
lib/GazeAnalyser/src/: GazeEstimation.cpp
lib/LandmarkDetector/: CMakeLists.txt
lib/LandmarkDetector/include/: LandmarkDetectorFunc.h  LandmarkDetectorParameters.h  LandmarkDetectorUtils.h  PDM.h
lib/LandmarkDetector/src/: FaceDetectorMTCNN.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorParameters.cpp  PDM.cpp  Patch_experts.cpp
lib/TorchFace/: CMakeLists.txt  bindings.cpp
lib/TorchFace/include/: TorchFace.h  TorchFaceLandmarkImg.h  TorchFeatureExtraction.h  TorchUtils.h
lib/TorchFace/src/: TorchFace.cpp  TorchFaceLandmarkImg.cpp  TorchFeatureExtraction.cpp  TorchUtils.cpp
lib/Utilities/include/: ImageCapture.h  ImageManipulationHelpers.h  RecorderCSV.h  RecorderHOG.h  RecorderOpenFace.h  RecorderOpenFaceParameters.h  SequenceCapture.h  Visualizer.h
lib/Utilities/src/: ImageCapture.cpp  RecorderCSV.cpp  RecorderOpenFace.cpp  RecorderOpenFaceParameters.cpp  VisualizationUtils.cpp  Visualizer.cpp
shed/: notes.md  set_paths.sh  temp.md
